[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cone.zodb"
version = "1.0a4.dev0"
description = "ZODB integration for cone.app"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
keywords = ["node", "pyramid", "cone", "web"]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "node.ext.zodb",
    "repoze.catalog",
    "pyramid_tm",
    "pyramid_zodbconn",
]

[project.optional-dependencies]
test = [
    "pytest",
    "zope.pytestlayer",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.zodb"

[tool.zest-releaser]
create-wheel = true
